# basic_playground

./: .gitignore  CMakeLists.txt  DashelAsebaGlue.cpp  DashelAsebaGlue.h  PlaygroundDBusAdaptors.cpp  PlaygroundViewer.cpp  PlaygroundViewer.h  README.rst  playground.cpp
CMakeModules/: FindGRPC.cmake  FindProtobuf.cmake
common/msg/: msg.cpp  msg.h
common/zeroconf/: CMakeLists.txt
examples/: thymio.playground
network/: CMakeLists.txt  GrpcServer.cpp  GrpcServer.h  RobotServiceImpl.cpp  RobotServiceImpl.h
network/messages/: simulation.proto
sim/: AsebaGlue.cpp  AsebaGlue.h  CMakeLists.txt  DirectAsebaGlue.cpp  DirectAsebaGlue.h  Door.cpp  EnkiGlue.h  Robots.h
sim/robots/e-puck/: EPuck-descriptions.c  EPuck.cpp
sim/robots/thymio2/: Thymio2-descriptions.c  Thymio2-natives.cpp  Thymio2-natives.h  Thymio2.cpp  Thymio2.h
vm/: CMakeLists.txt
